[package]
name = "anchor-escrow"
description = "Created with Anchor"
edition = "2021"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = {version = "0.24.2"}
spl-token = {version = "3.3.0", features = ["no-entrypoint"]}